efk/head/head-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-head
  namespace: logging
  labels:
    app: elasticsearch-head
spec:
  selector:
    matchLabels:
      app: elasticsearch-head
  template:
    metadata:
      labels:
        app: elasticsearch-head
    spec:
      containers:
      - name: elasticsearch-head
        image: mobz/elasticsearch-head:5
        ports:
        - containerPort: 9100
