efk/head/head-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-head
  namespace: logging
  labels:
    app: elasticsearch-head
spec:
  ports:
  - name: elasticsearch-head
    port: 9100
    protocol: TCP
    targetPort: 9100
  selector:
    app: elasticsearch-head
